<resources>
    <string name="app_name">Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="add_random">Add Random...</string>
    <string name="prefetch_playlist">Prefetch Playlist</string>
    <string name="prefetch_album_art">Prefetch Art</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unimplemented">Unimplemented</string>
    <string name="limit_cache_size">Limit cache size to %1$s</string>
    <string name="garbage_collect_cache">GC Cache</string>
    <string name="rescan_remote_db">Rescan Remote DB</string>

    <string name="cache_size_s">Cache size: %1$s</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_next">Play next</string>

    <string name="menu_library">Library</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_stats">Stats</string>

    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>

    <!-- Now playing view text view values -->
    <string name="song_track_no">Track No.:</string>
    <string name="song_playlist_no">Playlist No.:</string>
    <string name="song_bitrate">Bitrate:</string>
    <string name="song_audio_properties">Audio properties:</string>
    <string name="song_uri">Track URI:</string>
    <string name="song_title">Title:</string>
    <string name="song_album">Album:</string>
    <string name="song_artist">Artist:</string>
    <string name="song_artist_sort">Artist (sort):</string>
    <string name="song_album_artist">Album artist:</string>
    <string name="song_album_artist_sort">Album artist (sort):</string>
</resources>