<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.schlaikjer.music.ui.fragment.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_playlist"
        android:name="com.schlaikjer.music.ui.fragment.PlaylistFragment"
        android:label="@string/menu_playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.schlaikjer.music.ui.fragment.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

</navigation>