<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/dialog_add_random_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artists" />

        <RadioButton
            android:id="@+id/dialog_add_random_albums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/albums" />

        <RadioButton
            android:id="@+id/dialog_add_random_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracks" />

    </RadioGroup>

    <com.google.android.material.slider.Slider
        android:id="@+id/dialog_add_random_count"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10" />

</LinearLayout>