<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.fragment.StatsFragment">

    <TextView
        android:id="@+id/fragment_stats_cache_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/fragment_stats_limit_cache_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limit_cache_size" />

    <com.google.android.material.slider.Slider
        android:id="@+id/fragment_stats_max_cache_size"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="128"
        android:valueFrom="128"
        android:valueTo="10240" />

    <Button
        android:id="@+id/fragment_stats_gc_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garbage_collect_cache" />

    <Button
        android:id="@+id/fragment_stats_rescan_remote_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescan_remote_db" />

</LinearLayout>